plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.3'
    id("io.freefair.lombok") version "8.10"
}
apply plugin: 'io.spring.dependency-management'

configurations {
    all*.exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl'
}
group 'com.samabcde'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

test {
    useJUnitPlatform()
}

tasks.register('unitTest', Test) {
    useJUnitPlatform()
    description = 'Runs Unit tests.'
    group = 'verification'
    exclude("**/*IntegrationTest*")
}

tasks.register('integrationTest', Test) {
    useJUnitPlatform()
    description = 'Runs Integration tests.'
    group = 'verification'
    include("**/*IntegrationTest*")
}

dependencies {

    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'
    testCompileOnly 'org.projectlombok:lombok:1.18.34'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
    testImplementation 'org.mockito:mockito-core:5.11.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.13.0'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.3'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.3'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
    implementation 'com.google.guava:guava:33.2.1-jre'
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.toomasr:sgf4j-parser:0.0.6'
    implementation 'org.springframework.boot:spring-boot-starter'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    implementation 'org.jfree:jfreechart:1.5.5'
}